Fixed more bugs. Fixed a bug where the photo wouldn't show when first opening the lightbox. Fixed two bugs where the overlay buttons were not showing at first, and then were not hiding. Added in the lightbox progress circle.

--- a/stylesheets/photolightbox.css
+++ b/stylesheets/photolightbox.css
@@ -1,5 +1,5 @@
 
-.body {
+body {
   position: relative;
   margin: 0;
   background-color: #202020;
@@ -9,13 +9,14 @@
 
 .lightbox {
   display: none;
-  position: absolute;
+  position: fixed;
   background-color: #202020;
   z-index: 32010;
   overflow: hidden;
 }
 
 .lightbox.visible {
+  visibility: visible;
   min-width: 80px;
   min-height: 80px;
   -webkit-border-radius: 10px;
@@ -26,39 +27,40 @@
   box-shadow: -8px 8px 48px 16px #000000;/*TODO: tweak this*/
   -webkit-transition:
     visibility 0s linear 0s,
-    left 0.3s ease 0s,
-    top 0.3s ease 0s,
-    width 0.3s ease 0s,
-    height 0.3s ease 0s,
-    box-shadow 0.3s ease 0s,
-    -webkit-border-radius 0.3s ease 0s;
+    left 1.0s ease 0s,
+    top 1.0s ease 0s,
+    width 1.0s ease 0s,
+    height 1.0s ease 0s,
+    box-shadow 1.0s ease 0s,
+    -webkit-border-radius 1.0s ease 0s;
   -moz-transition:
     visibility 0s linear 0s,
-    left 0.3s ease 0s,
-    top 0.3s ease 0s,
-    width 0.3s ease 0s,
-    height 0.3s ease 0s,
-    box-shadow 0.3s ease 0s,
-    -moz-border-radius 0.3s ease 0s;
+    left 1.0s ease 0s,
+    top 1.0s ease 0s,
+    width 1.0s ease 0s,
+    height 1.0s ease 0s,
+    box-shadow 1.0s ease 0s,
+    -moz-border-radius 1.0s ease 0s;
   -o-transition:
     visibility 0s linear 0s,
-    left 0.3s ease 0s,
-    top 0.3s ease 0s,
-    width 0.3s ease 0s,
-    height 0.3s ease 0s,
-    box-shadow 0.3s ease 0s,
-    -o-border-radius 0.3s ease 0s;
+    left 1.0s ease 0s,
+    top 1.0s ease 0s,
+    width 1.0s ease 0s,
+    height 1.0s ease 0s,
+    box-shadow 1.0s ease 0s,
+    -o-border-radius 1.0s ease 0s;
   transition:
     visibility 0s linear 0s,
-    left 0.3s ease 0s,
-    top 0.3s ease 0s,
-    width 0.3s ease 0s,
-    height 0.3s ease 0s,
-    box-shadow 0.3s ease 0s,
-    border-radius 0.3s ease 0s;
+    left 1.0s ease 0s,
+    top 1.0s ease 0s,
+    width 1.0s ease 0s,
+    height 1.0s ease 0s,
+    box-shadow 1.0s ease 0s,
+    border-radius 1.0s ease 0s;
 }
 
 .lightbox.hidden {
+  visibility: hidden;
   min-width: 0;
   min-height: 0;
   -webkit-border-radius: 0;
@@ -149,7 +151,7 @@
 }
 
 .backgroundHaze {
-  position: absolute;
+  position: fixed;
   top: 0; left: 0;
   z-index: 32000;
   background-color: #030303;
@@ -285,4 +287,11 @@
 
 .nextButton:active {
   background-position: -102px -254px;
+}
+
+.lightbox svg {
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  margin: auto;
+  z-index: 32040;
 }
